samples/_failures_safe/1761202101_300904_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e086e28.c: In function ‘main’:
./samples/SAFE/__tmp_7e086e28.c:113:12: error: missing terminating " character
  113 |     printf("\nMatrix Addition
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7e086e28.c:113:5: error: expected expression at end of input
  113 |     printf("\nMatrix Addition
      |     ^~~~~~
./samples/SAFE/__tmp_7e086e28.c:113:5: error: expected declaration or statement at end of input
